--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -2,9 +2,9 @@ name: Code checks
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, developing ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, developing ]
 
 jobs:
   build:
