--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytz = "2022.7"
 six = "1.16.0"
 sqlparse = "0.4.3"
 psycopg2 = "^2.9.9"
+django-non-dark-admin = "^2.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
