--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ six = "1.16.0"
 sqlparse = "0.4.3"
 psycopg2 = "^2.9.9"
 django-non-dark-admin = "^2.0.2"
+unidecode = "^1.3.8"
 
 
 [tool.poetry.group.dev.dependencies]
