--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,10 @@ pytz = "2022.7"
 six = "1.16.0"
 sqlparse = "0.4.3"
 psycopg2 = "^2.9.9"
-django-non-dark-admin = "^2.0.2"
 unidecode = "^1.3.8"
+channels = "^4.1.0"
+daphne = "^4.1.2"
+channels-redis = "^4.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
