--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ unidecode = "^1.3.8"
 channels = "^4.1.0"
 daphne = "^4.1.2"
 channels-redis = "^4.2.0"
+celery = {extras = ["redis"], version = "^5.4.0"}
 
 
 [tool.poetry.group.dev.dependencies]
